--- a/src/app/central-section/board/board.component.css
+++ b/src/app/central-section/board/board.component.css
@@ -27,6 +27,7 @@
   transition: .3s ease;
   font-family: 'Secular One', sans-serif;
   font-size: 3vh;
+  background: #FFE3C3;
 }
 
 .checkmark_on_board {
