--- a/src/app/central-section/board/board.component.html
+++ b/src/app/central-section/board/board.component.html
@@ -43,10 +43,12 @@
   <!--Guesses-->
   <div *ngIf="!isReviewing">
     <div *ngFor="let guess of guesses; let i = index"
-         class="intersection letter_on_board"
+         [ngClass]="getGuessOnBoardStyle()"
          [ngStyle]="{'top': getPos(guess.row)+'%', 'left': getPos(guess.column)+'%'}">
       &nbsp;
-      <span *ngIf="!isHovering(guess) && guessUnresolved()">{{getGuessLetter(i)}}</span>
+      <span *ngIf="!isHovering(guess) && guessUnresolved()">
+        {{getGuessLetter(i)}}
+      </span>
       <span *ngIf="(guessUnresolved() && isHovering(guess)) || (!guessUnresolved() && !isCorrectGuess(i))">
         <fa-icon [icon]="faX" [styles]="{'stroke': 'red', 'color': 'red'}"></fa-icon>
       </span>
