--- a/src/styles.css
+++ b/src/styles.css
@@ -56,8 +56,17 @@
   animation-duration: .3s;
   padding: 40px 30px 40px 30px;
   max-height: 400px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
+
+.popup::-webkit-scrollbar {
+  display: none;
+}
+
+
 h1 {
   font-family: 'Catamaran', sans-serif;
   font-weight: 900;
