Refactored css to avoid duplicates.

--- a/src/app/confirmation/confirmation.component.html
+++ b/src/app/confirmation/confirmation.component.html
@@ -3,8 +3,8 @@
   <h2>Are you sure you want to restart the game?</h2>
   <div style="height: 20px;"></div>
   <div class="buttons_container" >
-    <button class="button_blue" (click)="cancel.emit()">CANCEL</button>
-    <button class="button_blue" (click)="confirm.emit()">RESTART</button>
+    <button class="nice_button blue_button" (click)="cancel.emit()">CANCEL</button>
+    <button class="nice_button blue_button" (click)="confirm.emit()">RESTART</button>
   </div>
   <div style="height: 20px;"></div>
 </div>
