--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -48,5 +48,5 @@
     You can e-mail me at <a style="font-weight: 300;" href="mailto:javierglezvega@gmail.com">javierglezvega@gmail.com</a>.
   </p>
   <div style="height: 20px;"></div>
-  <button class="button_blue" (click)="closeInfo.emit();">CLOSE</button>
+  <button class="nice_button blue_button" (click)="closeInfo.emit();">CLOSE</button>
 </div>
