--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -18,5 +18,5 @@
     <strong>Have fun!</strong>
   </p>
   <div style="height: 20px;"></div>
-  <button class="button_blue" (click)="startGame.emit()">START</button>
+  <button class="nice_button blue_button" (click)="startGame.emit()">START</button>
 </div>
