--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -17,7 +17,7 @@
   <div style="height: 5px;"></div>
   <div class="player_name" style="display: block; font-size: 19px;">Played on <b>{{gameDate}}</b></div>
   <div style="height: 20px;"></div>
-  <button class="button_white" (click)="showIntroduction.emit()">HOW TO PLAY</button>
+  <button class="nice_button white_button" (click)="showIntroduction.emit()">HOW TO PLAY</button>
   <div style="height: 20px;"></div>
-  <button class="button_blue" (click)="startGame.emit()">START</button>
+  <button class="nice_button blue_button" (click)="startGame.emit()">START</button>
 </div>
