Now showing a picture of the actual cat.

--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -48,7 +48,7 @@
   <div style="height: 16px;"></div>
   <div class="img_container">
     <img class="info_photo"
-         src="https://i.pinimg.com/originals/75/04/f1/7504f1f08a43b933c59e38a3a2834d17.jpg"
+         src="https://pps.whatsapp.net/v/t61.24694-24/144931745_2864729537167678_3431477718723344892_n.jpg?ccb=11-4&oh=01_AdSPvzHQXI5cjlmmx3JG_DX1Ao9O2J7AUxk3nyR0YTcYmA&oe=636EAF34"
          alt="Javier"/> <!-- todo change picture? -->
     <img class="info_photo"
          src="https://avatars0.githubusercontent.com/u/8282109?type=square&v=3"
