--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,7 @@
 <app-score *ngIf="scoreVisible"
            [lastMove]="game.lastMove"
            [scoreHistory]="scoreHistory"
+           [attempt]="gameRun"
            [game]="game"
            (closeTab)="hideScoreView()"
            (restartGame)="showConfirmationView()"></app-score>
