Now latest attempt is stored as cookies and loaded when page is re-opened.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,9 @@
 <app-central-section (showScore)="updateAndShowScore($event)"
                      (closePopups)="processPopupClosing()"
                      (reviewConcluded)="showReviewConcludedView()"
+                     (autoPlayedMove)="updateMoveLoading($event)"
                      [gameRun]="gameRun"
+                     [autoPlay]="loadMoves"
                      [gamePaused]="isGamePaused()"
                      [game]="game">
 
