--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <!--info button-->
-<button class="info_button" (click)="showInfoView();">i</button>
+<button class="header_button" style="right: 34px" (click)="showInfoView();">i</button>
 
 <!--Main screen-->
 <app-central-section (showScore)="updateAndShowScore($event)"
