--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,4 +1,4 @@
-<div class="info popup">
+<div class="popup">
   <h2>TODAY'S GAME</h2>
   <div style="height: 18px;"></div>
   <div style="display: flex; flex-flow: row;">
