--- a/src/app/review-concluded/review-concluded.component.html
+++ b/src/app/review-concluded/review-concluded.component.html
@@ -1,4 +1,4 @@
-<div class="popup score_summary">
+<div class="popup">
   <div style="height: 20px;"></div>
     <h2>YOU HAVE REACHED YOUR LATEST CHECKPOINT.</h2>
   <div style="height: 20px;"></div>
