--- a/src/app/score/score.component.html
+++ b/src/app/score/score.component.html
@@ -1,4 +1,4 @@
-<div class="popup score_summary">
+<div class="popup">
   <div class="score_total_score"></div>
   <div style="height: 20px;"></div>
   <h2>ATTEMPT {{attempt}}</h2>
