--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,10 +1,10 @@
-<div id="welcome" class="popup">
+<div class="popup">
   <h1>Welcome to<br>Baduk Guessr!</h1>
   <div style="height: 20px;"></div>
   <div class="player_name" style="display: block;"><b>Today's game is:</b></div>
   <div style="height: 4px;"></div>
   <div style="display: flex; flex-flow: row;">
-    <div style="flex: 0%; height: 10px"></div>
+    <div style="flex: 0; height: 10px"></div>
     <div id="players_name_parent" style="white-space: nowrap; width: auto;">
       <div class="stone_black_player"></div>
       <div class="player_name"><b>{{blackPlayerName}}</b> {{blackPlayerRank}}</div>
@@ -12,7 +12,7 @@
       <div class="stone_white_player"></div>
       <div class="player_name"><b>{{whitePlayerName}}</b> {{whitePlayerRank}}</div>
     </div>
-    <div style="flex: 0%; height: 10px"></div>
+    <div style="flex: 0; height: 10px"></div>
   </div>
   <div style="height: 5px;"></div>
   <div class="player_name" style="display: block; font-size: 19px;">Played on <b>{{gameDate}}</b></div>
