--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,4 +1,4 @@
-<div id="introduction" class="popup">
+<div class="popup padded-container">
   <h2>HOW TO PLAY</h2>
   <div style="height: 20px;"></div>
   <p>
