re-organized styles a bit.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
 <!--info button-->
 <button class="header_button" style="right: 34px" (click)="showInfoView();">i</button>
 
+<!--info button-->
+<button class="header_button" style="right: 68px" (click)="showMoreView();">+</button>
+
 <!--Main screen-->
 <app-central-section (showScore)="updateAndShowScore($event)"
                      (closePopups)="processPopupClosing()"
