--- a/src/app/central-section/board/board.component.html
+++ b/src/app/central-section/board/board.component.html
@@ -1,6 +1,6 @@
 <!--Board itself.-->
-<div id="board_master">
-  <div id="board_shadow"></div>
+<div class="board_container">
+  <div class="board_shadow"></div>
   <svg width="100%" height="100%" viewBox="0 0 200 220">
     <path fill="#FFE3C3" d="M 5 5 L 195 5 L 195 195 L 5 195 Z"/>
     <path fill="#CAAA92" d="M 5 195 L 195 195 L 182 205 L 18 205 Z"/>
@@ -23,7 +23,7 @@
   </svg>
 </div>
 
-<div id="stones_master">
+<div class="stones_container">
 
   <!--Hovering stone.-->
   <div *ngIf="showHoveringStone()"
