--- a/src/app/central-section/central-section.component.html
+++ b/src/app/central-section/central-section.component.html
@@ -1,7 +1,7 @@
 <div id="flex_master">
   <div class="separator_flex"></div>
 
-  <div id="screen_master">
+  <div class="screen_master">
     <app-move-info (showScore)="showScore.emit(scoreHistory)"
                    [moveNumber]="moveNumber"
                    [score]="score"
