Resizing board when width is smaller.

--- a/src/app/central-section/board/board.component.css
+++ b/src/app/central-section/board/board.component.css
@@ -108,3 +108,8 @@
   85% {opacity: 1; transform: translate(-50%,-50%) scale(1.2, 1.2);}
   100% {opacity: 1; transform: translate(-50%,-50%) scale(1, 1);}
 }
+
+@media screen and (max-width: 800px) {
+  .board_container {top: 50px; width: 100vw; height: 110vw;}
+  .stones_container {position: relative; width: 100vw; height: 100vw;}
+}
