--- a/src/app/central-section/guess-bar/guess-bar.component.html
+++ b/src/app/central-section/guess-bar/guess-bar.component.html
@@ -1,4 +1,4 @@
-<div class="bar_and_button_master">
+<div class="bar_and_button_container">
   <div class="animated_number_going_up_parent">
     <div *ngIf="correctGuess!==-1" class="animated_number_going_up">
       {{getEarnedPointsText()}}
