--- a/src/app/central-section/central-section.component.css
+++ b/src/app/central-section/central-section.component.css
@@ -8,6 +8,8 @@
   transform: translate(-50%,0%);
 }
 
+/*#screen_master {position: relative; left: 0; top: 60px; width: 100vw; height: auto; transform: translate(0%,0%);}*/
+
 @media screen and (max-width: 800px) {
-  .screen_master {top: 60px;}
+  .screen_master {position: relative; left: 0; top: 60px; width: 100vw; height: auto; transform: translate(0%,0%);}
 }
