Fixed game index updating when game doesn't.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,7 @@
            [scoreHistory]="scoreHistory"
            [attempt]="gameRun"
            [game]="game"
+           [gameIndex]="gameIndex"
            (closeTab)="hideScoreView()"
            (restartGame)="showConfirmationView()"></app-score>
 
