--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,20 @@
 <!--info button-->
 <button class="header_button" style="right: 34px" (click)="showInfoView();">i</button>
 
-<!--&lt;!&ndash;more button&ndash;&gt;-->
-<!--<button class="header_button" style="right: 68px" (click)="showMoreView();">+</button>-->
+<!--more button-->
+<!--<div ngbDropdown #myDrop="ngbDropdown">-->
+<!--<div ngbDropdown class="d-inline-block">-->
+<!--  <button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>-->
+<!--    Toggle dropdown-->
+<!--  </button>-->
+<!--  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">-->
+<!--    <button ngbDropdownItem>Action - 1</button>-->
+<!--    <button ngbDropdownItem>Another Action</button>-->
+<!--    <button ngbDropdownItem>Something else is here</button>-->
+<!--  </div>-->
+<!--</div>-->
+<button class="header_button" style="right: 85px; font-weight: bold" (click)="showMoreView();">+</button>
+<!--</div>-->
 
 <!--Main screen-->
 <app-central-section (showScore)="updateAndShowScore($event)"
