--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,18 +9,18 @@
 <button class="header_button" style="right: 34px" (click)="showInfoView();">i</button>
 
 <!--more button-->
-<!--<div ngbDropdown #myDrop="ngbDropdown">-->
-<!--<div ngbDropdown class="d-inline-block">-->
-<!--  <button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>-->
-<!--    Toggle dropdown-->
-<!--  </button>-->
-<!--  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">-->
-<!--    <button ngbDropdownItem>Action - 1</button>-->
-<!--    <button ngbDropdownItem>Another Action</button>-->
-<!--    <button ngbDropdownItem>Something else is here</button>-->
-<!--  </div>-->
-<!--</div>-->
-<button class="header_button" style="right: 85px; font-weight: bold" (click)="showMoreView();">+</button>
+<div ngbDropdown>
+  <button ngbDropdownToggle class="header_button" style="right: 85px; font-weight: bold" >+</button>
+  <div ngbDropdownMenu class="dropdown_menu">
+    <span class="dropdown_menu_item" style="text-align: center">
+      CAPTURES
+    </span>
+    <span class="dropdown_menu_item buttons_container" >
+      <span style="text-align: left">B: {{game.getCaptures('B', moveNumber)}}</span>
+      <span style="text-align: right">W: {{game.getCaptures('W', moveNumber)}}</span>
+    </span>
+  </div>
+</div>
 <!--</div>-->
 
 <!--Main screen-->
@@ -28,6 +28,7 @@
                      (closePopups)="processPopupClosing()"
                      (reviewConcluded)="showReviewConcludedView()"
                      (autoPlayedMove)="updateMoveLoading($event)"
+                     (changeMove)="updateMoveNumber($event)"
                      [gameRun]="gameRun"
                      [autoPlay]="loadMoves"
                      [gamePaused]="isGamePaused()"
