Added animation for appearing icons.

--- a/src/app/central-section/guess-bar/guess-bar.component.html
+++ b/src/app/central-section/guess-bar/guess-bar.component.html
@@ -12,11 +12,11 @@
       <div class="guess_letter">
         <b>
           &nbsp;
-          <span *ngIf="isCorrectGuess(i)" class="centered_container">
+          <span *ngIf="isCorrectGuess(i)" class="centered_container appearing_icon">
             <fa-icon [icon]="faCheck" [styles]="{'stroke': 'green', 'color': 'green'}"></fa-icon>
           </span>
           <span *ngIf="isGuessUnresolved()" class="centered_container">{{guessNames[i]}}</span>
-          <span *ngIf="!isGuessUnresolved() && !isCorrectGuess(i)" class="centered_container">
+          <span *ngIf="!isGuessUnresolved() && !isCorrectGuess(i)" class="centered_container appearing_icon">
             <fa-icon [icon]="faX" [styles]="{'stroke': 'red', 'color': 'red'}"></fa-icon>
           </span>
           &nbsp;
