--- a/src/app/central-section/central-section.component.css
+++ b/src/app/central-section/central-section.component.css
@@ -8,6 +8,18 @@
   transform: translate(-50%,0%);
 }
 
+.appearing_icon {
+  animation-name: appearing_icon_animation;
+  animation-duration: 500ms;
+}
+
+
+@keyframes appearing_icon_animation {
+  0% {opacity: 0; transform: scale(0, 0);}
+  85% {opacity: 1; transform: scale(1.3, 1.3);}
+  100% {opacity: 1; transform: scale(1, 1);}
+}
+
 /*#screen_master {position: relative; left: 0; top: 60px; width: 100vw; height: auto; transform: translate(0%,0%);}*/
 
 @media screen and (max-width: 960px) {
